--- a/Paas_Ta_Front/paas/src/modules/views/card/card.scss
+++ b/Paas_Ta_Front/paas/src/modules/views/card/card.scss
@@ -3,12 +3,12 @@ $optionsColor: #999;
 $time: #9ea3ab;
 $cardHover: #ebedf0;
 
-:global(.card-link) {
+.card-link {
   text-decoration: none;
   color: $optionsColor;
 }
 
-:global(.card) {
+.card {
   display: flex;
   border-bottom: 1px solid rgba(153, 153, 153, 0.3);
   justify-content: space-between;
@@ -21,21 +21,21 @@ $cardHover: #ebedf0;
     background-color: $cardHover;
   }
 
-  :global(.content) {
+  .content {
     display: flex;
     color: black;
     align-items: center;
 
-    :global(.message) {
+    .message {
       margin: 0 8px;
     }
 
-    :global(.time) {
+    .time {
       color: $optionsColor;
     }
   }
 
-  :global(.image) {
+  .image {
     img {
       height: 40px;
       border-radius: 50%;
@@ -44,12 +44,12 @@ $cardHover: #ebedf0;
     margin: 5px;
   }
 
-  :global(.options) {
+  .options {
     visibility: hidden;
     text-align: center;
     font-size: 20px;
 
-    :global(.option) {
+    .option {
       cursor: pointer;
       opacity: 0.5;
       color: $optionsColor;
@@ -61,7 +61,7 @@ $cardHover: #ebedf0;
   }
 
   &:hover {
-    :global(.options) {
+    .options {
       visibility: visible;
     }
   }
