--- a/Paas_Ta_Front/paas/src/Video.scss
+++ b/Paas_Ta_Front/paas/src/Video.scss
@@ -14,8 +14,10 @@
       display: flex;
       justify-content: center;
       .video-block {
-        height: 200px;
-        width: 300px;
+        margin: 5px auto;
+        height: 190px;
+        width: 250px;
+        border: 5px #333 solid;
       }
     }
   }
