--- a/Paas_Ta_Front/paas/src/Video.scss
+++ b/Paas_Ta_Front/paas/src/Video.scss
@@ -18,6 +18,7 @@
         height: 190px;
         width: 250px;
         border: 5px #333 solid;
+        background-color : gray;
       }
     }
   }
